# web-summarizer-agent

./: .env.example  .gitignore  =3.1.0  =6.0.0  API_README.md  BROWSER_QUICKSTART.md  DEPLOYMENT.md  Dockerfile  GEMINI_MIGRATION.md  HACKATHON.md  LICENSE  MESHCORE_LISTING.md  MESHCORE_READY.md  MESHCORE_SUBMISSION.md  PROJECT_SUMMARY.md  QUICKSTART.md  RAG_GUIDE.md  README.md  STATUS.md  TOPIC_AGGREGATION.md  USER_STORIES.md  api.py  docker-compose.yml  meshcore.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements-rag.txt  requirements.txt  setup.py  test_auto_search.html  test_gemini.py  test_search.py  test_topic_aggregation.html
examples/: advanced_usage.py  basic_usage.py  batch_processing.py  topic_aggregation_example.py
output/: ai_test.csv  ai_trends_auto.csv  climate_news.xlsx  parenthood_social_media.xlsx  python_auto.csv  sustainable_living.xlsx  test_social_media.csv  test_social_media.xlsx
src/web_summarizer/: __init__.py  agent.py  extractor.py  fetcher.py  models.py  rag_engine.py  spreadsheet_generator.py  summarizer.py  topic_aggregator.py  web_searcher.py
tests/: __init__.py  test_extractor.py  test_fetcher.py  test_models.py
